--- a/config/cable.yml
+++ b/config/cable.yml
@@ -5,5 +5,5 @@ test:
   adapter: async
 
 production:
-  adapter: redis
-  url: redis://localhost:6379/1
+  adapter: postgresql
+  url: postgres://aiqauizpmgqsya:jycC4m_yJ5rGYxXAj2G1V0lWRj@ec2-54-225-101-191.compute-1.amazonaws.com:5432/d4uvthtee58tpv
